#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(fastcgilab, 1, tt@tt.com)
AM_INIT_AUTOMAKE(pippo, 2.6)
#AC_CONFIG_SRCDIR([src/example.cpp])
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
LT_INIT
# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([src/Makefile])
AC_OUTPUT
