pkglib_LTLIBRARIES = fastcgilab.la

fastcgilab_la_SOURCES = HelloHandler.h HelloHandler.cpp
fastcgilab_la_LDFLAGS = -module
fastcgilab_la_LIBADD = /home/nsemianenka/Documents/fastcgi/Fastcgi-Daemon/library/libfastcgi-daemon2.la

AM_CPPFLAGS = -I/home/nsemianenka/Documents/fastcgi/Fastcgi-Daemon/include -I/home/nsemianenka/Documents/fastcgi/Fastcgi-Daemon/config
AM_CXXFLAGS = -pthread
AM_LDFLAGS = 
ACLOCAL_AMFLAGS = -I m4
